--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 body {
   margin: 0;
+  background-color: mintcream;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
@@ -19,11 +18,11 @@ code {
 }
 
 .dark-mode {
-  background-color: black;
+  background-color: rgb(50, 172, 50);
 }
 
 .dark-mode h1{
-  background-color: white;
+  background-color: rgb(50, 172, 50);
 }
 
 .container {
@@ -45,13 +44,13 @@ code {
 }
 
 .note.new{
-  background-color: aqua;
+  background-color: red;
 }
 
 textarea {
   border: none;
   resize: none;
-  background-color: aqua;
+  background-color: red;
 }
 
 textarea:focus {
@@ -71,9 +70,10 @@ textarea:focus {
 }
 
 .note{
-  background-color: yellow;
+  background-color: red;
   margin-bottom: 10px;
   border-radius: 10px;
+  box-shadow: inset;
   padding: 1rem;
   min-height: 170px;
   display: flex;
@@ -95,9 +95,12 @@ textarea:focus {
 .search{
   display: flex;
   align-items: center;
+  height: 50px;
   background-color: rgb(233, 233, 233);
-  border-radius: 10px;
-  margin-bottom: 1.5em;
+  border-radius: 30px;
+  margin-bottom: 2em;
+  box-shadow: 2px 3px 28px 1px rgba(42, 42, 42, 0.1);
+  border: 0px solid transparent;
 }
 
 .search input {
